canary/ingress/expose.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx1
  labels:
    run: my-nginx
spec:
  type: NodePort
  ports:
  - name: http
    containerPort: 80
  - name: prometheus
    containerPort: 32111

  selector:
    run: my-nginx
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx2
  labels:
    run: my-nginx
spec:
  ports:
  - name: http
    containerPort: 80
  - name: prometheus
    containerPort: 32111
    
  selector:
    run: my-nginx
    version: 2.0.0
