canary/ingress/ingress-canary.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-cn-canary
  labels:
    app: my-cn-canary
  annotations: 
    kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - backend:
          serviceName: my-cn2
          servicePort: 80
      - backend:
          serviceName: my-cn2
          servicePort: 32111
