canary/ingress/ingress-v1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-cn
  labels:
    run: ingress-cn
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - backend:
          serviceName: my-cn1
          servicePort: 80
      - backend:
          serviceName: my-cn1
          servicePort: 32111

---
apiVersion: v1
kind: Service
metadata:
  name: exp-nginx
  labels:
    run: exp-nginx
spec:
  type: NodePort
  ports:
  - nodePort: 31028
    port: 80
    targetPort: 80
    name: http
  - nodePort: 32111
    port: 32111
    targetPort: 32111
    name: prometheus
  selector:
    app.kubernetes.io/name: ingress-nginx
