canary/ingress/ingress-v2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-cn
  labels:
    run: ingress-cn
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - backend:
          serviceName: my-cn2
          servicePort: 80
      - backend:
          serviceName: my-cn2
          servicePort: 32111
